--- a/main/index.ejs
+++ b/main/index.ejs
@@ -160,7 +160,7 @@
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -182,7 +182,7 @@
                 />
                 <div>
                   <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -209,7 +209,7 @@
                 />
                 <div>
                   <h3>MySQL</h3>
-                  <p>Beginner level</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -223,6 +223,18 @@
                   <p>Experienced</p>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Spring Boot</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              
               <article>
                 <img
                   src="./assets/checkmark.png"
