--- a/main/index.ejs
+++ b/main/index.ejs
@@ -234,7 +234,17 @@
                   <p>Experienced</p>
                 </div>
               </article>
-              
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
               <article>
                 <img
                   src="./assets/checkmark.png"
