--- a/main/index.ejs
+++ b/main/index.ejs
@@ -380,6 +380,30 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
+                src="./assets/m1.jpg"
+                alt="Project 2"
+                class="project-img1"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Mobile Store</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/StoyanDyuzov/Ecommerce-website'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://ecommerce-website-1cqg.onrender.com'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
                 src="./assets/v1.jpg"
                 alt="Project 3"
                 class="project-img1"
