--- a/main/index.ejs
+++ b/main/index.ejs
@@ -382,75 +382,42 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/phone1.jpg"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Weather App</h2>
+            
+            <h2 class="experience-sub-title project-title">Web Store(PHP)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/StoyanDyuzov/Weather-app1'"
+                onclick="location.href='https://github.com/StoyanDyuzov/E-STORE-PHP-'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://weather-app-aw89.onrender.com'"
-              >
-                Live Demo
-              </button>
+              
             </div>
           </div>
           <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/m1.jpg"
-                alt="Project 2"
-                class="project-img1"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Mobile Store</h2>
+            
+            <h2 class="experience-sub-title project-title">Book Store(Laravel)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/StoyanDyuzov/Ecommerce-website'"
+                onclick="location.href='https://github.com/StoyanDyuzov/Book-Shop'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://ecommerce-website-1cqg.onrender.com'"
-              >
-                Live Demo
-              </button>
+              
             </div>
           </div>
           <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/v1.jpg"
-                alt="Project 3"
-                class="project-img1"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Villa Agency</h2>
+            
+            <h2 class="experience-sub-title project-title">ERP System and Web Store(SAP Project)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/StoyanDyuzov/SD-Agency-'"
+                onclick="location.href='https://github.com/StoyanDyuzov/Sap-project'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://sd-agency.onrender.com'"
-              >
-                Live Demo
-              </button>
+              
             </div>
           </div>
         </div>
